added main-banner image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
       </nav>
     </div>
   </header>
-  <main></main>
+
+  <main>
+      <img class="main-banner" src="http://i.imgur.com/Sf2EEXc.jpg">
+  </main>
   <footer></footer>
 </body>
 </html>
