added new main photo

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Salmon Cookies</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
 <body>
@@ -22,7 +23,8 @@
 
   <main>
       <section>
-        <img class="main-banner" src="http://i.imgur.com/itHIxjT.jpg">
+        <img class="main-banner" src="http://i.imgur.com/jZ0wyzh.png">
+        <span><button>ORDER NOW!</button></span>
       </section>
 
       <section class="article-content" id="about">
@@ -37,7 +39,7 @@
 
       <section class="article-content" id="contact">
         <h3>CONTACT</h3>
-        "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
+        "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
       </section>
 
   </main>
