--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <nav>
         <ul>
           <li><a href="#">Order Now</a></li>
-          <li><a href="#"></a>Blog</li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="#blog"></a>Blog</li>
+          <li><a href="#contact">Contact</a></li>
+          <li><a href="#about">About</a></li>
         </ul>
       </nav>
     </div>
