--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
   <title>Salmon Cookies</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+
+  <link rel="stylesheet" type="text/css" href="reset.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
