--- a/sales-index.html
+++ b/sales-index.html
@@ -6,7 +6,7 @@
   </head>
 
   <table>
-    <thead id="header-shell">
+    <thead id="shell-head">
       <td>Name</td>
       <td>Age</td>
       <td>Profession</td>
@@ -17,6 +17,11 @@
       <!-- our table info goes in here -->
 
     </tbody>
+
+    <tfoot id="shell-foot">
+
+    </tfoot>
+
   </table>
 
 </html>
