appended rows, no other changes

--- a/sales-index.html
+++ b/sales-index.html
@@ -11,6 +11,16 @@
       <td>Age</td>
       <td>Profession</td>
       <td>Double Age</td>
+      <td>Double Age</td>
+      <td>Double Age</td>
+      <td>Double Age</td>
+      <td>Double Age</td>
+      <td>Double Age</td>
+      <td>Double Age</td>
+      <td>Double Age</td>
+      <td>Double Age</td>
+      <td>Double Age</td>
+      <td>Double Age</td>
     </thead>
 
     <tbody id="shell">
