added reset stylesheet

--- a/sales-index.html
+++ b/sales-index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Salmon Cookies Dashboard</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="sales-style.css">
   </head>
 
