--- a/sales-index.html
+++ b/sales-index.html
@@ -6,18 +6,42 @@
     <link rel="stylesheet" href="sales-style.css">
   </head>
 
+  <body>
+    <form id="main_form">
+      <fieldset>
+        <label for="store_name">Store Name:</label>
+        <input type="text" name="store_name" placeholder="enter the store name" required>
+      </fieldset>
+
+      <fieldset>
+        <label for="min_Cust">Minimum Customers:</label>
+        <input type="number" name="min_cust" placeholder="enter minimum number of customers">
+      </fieldset>
+
+      <fieldset>
+        <label for="max_Cust">Maximum Customers:</label>
+        <input type="number" name="max_cust" placeholder="enter maximum number of customers">
+      </fieldset>
+
+      <fieldset>
+        <label for="avg_sales_cust">Average Sales/Customer</label>
+        <input type="number" name="avg_sales_cust" placeholder="enter maximum number of customers">
+      </fieldset>
+
+      <button id="submit-btn" type="submit">Add Store!</button>
+
+    </form>
+  </body>
+
   <table>
     <thead id="shell-head">
-
     </thead>
 
     <tbody id="shell">
       <!-- our table info goes in here -->
-
     </tbody>
 
     <tfoot id="shell-foot">
-
     </tfoot>
 
   </table>
