--- a/sales-index.html
+++ b/sales-index.html
@@ -4,6 +4,7 @@
     <title>Salmon Cookies Dashboard</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="sales-style.css">
+    <link rel="stylesheet" href="table-style.css">
   </head>
 
   <body>
