--- a/sales-index.html
+++ b/sales-index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Salmon Cookies Dashboard</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="sales-style.css">
+    <!-- <link rel="stylesheet" href="sales-style.css"> -->
     <link rel="stylesheet" href="table-style.css">
   </head>
 
@@ -16,17 +16,17 @@
 
       <fieldset>
         <label for="min_Cust">Minimum Customers:</label>
-        <input type="number" name="min_cust" placeholder="enter minimum number of customers">
+        <input type="number" name="min_cust" placeholder="min # of customers" required>
       </fieldset>
 
       <fieldset>
         <label for="max_Cust">Maximum Customers:</label>
-        <input type="number" name="max_cust" placeholder="enter maximum number of customers">
+        <input type="number" name="max_cust" placeholder="max # of customers" required>
       </fieldset>
 
       <fieldset>
         <label for="avg_sales_cust">Average Sales/Customer</label>
-        <input type="number" name="avg_sales_cust" placeholder="enter maximum number of customers">
+        <input type="number" name="avg_sales_cust" placeholder="avg sales/customer" required>
       </fieldset>
 
       <button id="submit-btn" type="submit">Add Store!</button>
@@ -36,6 +36,22 @@
 
   <table>
     <thead id="shell-head">
+      <td></td>
+      <td>6:00 AM</td>
+      <td>7:00 AM</td>
+      <td>8:00 AM</td>
+      <td>9:00 AM</td>
+      <td>10:00 AM</td>
+      <td>11:00 AM</td>
+      <td>12:00 PM</td>
+      <td>1:00 PM</td>
+      <td>2:00 PM</td>
+      <td>3:00 PM</td>
+      <td>4:00 PM</td>
+      <td>5:00 PM</td>
+      <td>6:00 PM</td>
+      <td>7:00 PM</td>
+      <td>8:00 PM</td>
     </thead>
 
     <tbody id="shell">
