fixed hard coded header

--- a/sales-index.html
+++ b/sales-index.html
@@ -37,7 +37,6 @@
   <table>
     <thead id="shell-head">
       <td></td>
-      <td>6:00 AM</td>
       <td>7:00 AM</td>
       <td>8:00 AM</td>
       <td>9:00 AM</td>
@@ -52,6 +51,7 @@
       <td>6:00 PM</td>
       <td>7:00 PM</td>
       <td>8:00 PM</td>
+      <td>Daily Location Total</td>
     </thead>
 
     <tbody id="shell">
