corrected var typo

--- a/sales-index.html
+++ b/sales-index.html
@@ -15,12 +15,12 @@
       </fieldset>
 
       <fieldset>
-        <label for="min_Cust">Minimum Customers:</label>
+        <label for="min_cust">Minimum Customers:</label>
         <input type="number" name="min_cust" placeholder="min # of customers" required>
       </fieldset>
 
       <fieldset>
-        <label for="max_Cust">Maximum Customers:</label>
+        <label for="max_cust">Maximum Customers:</label>
         <input type="number" name="max_cust" placeholder="max # of customers" required>
       </fieldset>
 
