--- a/sales-index.html
+++ b/sales-index.html
@@ -26,7 +26,7 @@
 
       <fieldset>
         <label for="avg_sales_cust">Average Sales/Customer</label>
-        <input type="number" name="avg_sales_cust" placeholder="avg sales/customer" required>
+        <input type="text" name="avg_sales_cust" placeholder="avg sales/customer" required>
       </fieldset>
 
       <button id="submit-btn" type="submit">Add Store!</button>
