--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <header>
     <div>
       <img src="http://i.imgur.com/kAP662u.png">
+      <img src="https://github.com/codefellows/seattle-201d22/blob/master/09-js_debugging_dev_tools_animations/lab/assets/chinook.jpg?raw=true">
       <nav>
         <ul>
           <li><a href="#">Order Now</a></li>
@@ -52,7 +53,12 @@
       <div class="clearfix"></div>
 
       <section class="article-content" id="about">
-        <h3>ABOUT</h3>
+        <h3>
+          <img src="https://raw.githubusercontent.com/codefellows/seattle-201d22/master/09-js_debugging_dev_tools_animations/lab/assets/fish.jpg">
+          A B O U T
+          <img src="https://raw.githubusercontent.com/codefellows/seattle-201d22/master/09-js_debugging_dev_tools_animations/lab/assets/fish.jpg">
+        </h3>
+
         <p>
           "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
         </p>
@@ -60,7 +66,9 @@
 
       <section class="article-content" id="blog">
         <h3>
-          BLOG
+          <img src="https://raw.githubusercontent.com/codefellows/seattle-201d22/master/09-js_debugging_dev_tools_animations/lab/assets/fish.jpg">
+          B L O G
+          <img src="https://raw.githubusercontent.com/codefellows/seattle-201d22/master/09-js_debugging_dev_tools_animations/lab/assets/fish.jpg">
         </h3>
         <p>
           "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
@@ -68,8 +76,17 @@
       </section>
 
       <section class="article-content" id="contact">
-        <h3>CONTACT</h3>
-        <p>You can reach us at: </p>
+        <h3>
+          <img src="https://raw.githubusercontent.com/codefellows/seattle-201d22/master/09-js_debugging_dev_tools_animations/lab/assets/fish.jpg">
+          C O N T A C T
+          <img src="https://raw.githubusercontent.com/codefellows/seattle-201d22/master/09-js_debugging_dev_tools_animations/lab/assets/fish.jpg">
+        </h3>
+        <p class="contact-us">First and Pike #: 555-555-5555 // Google Us!</p>
+        <p class="contact-us">Seattle Center #: 555-555-5555 // Google Us!</p>
+        <p class="contact-us">Cap Hill #: 555-555-5555 // Google Us!</p>
+        <p class="contact-us">SeaTac #: 555-555-5555 // Google Us!</p>
+        <p class="contact-us">Alki #: 555-555-5555 // Google Us!</p>
+
       </section>
 
   </main>
